# solana-rug

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUG_FORENSICS.md  SKILL.md  VALIDATION_REPORT.md  docker-compose.yml  docker-entrypoint.sh  filter-repo-replacements.txt  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  release.yml
demos/vhs/: demo-30s.tape  env.sh  render_demo_gif.sh  run-solana-rug-demo.sh  sanitize-recording-env.sh  theme.json
docs/: _redirects  index.html
rugguard/: __init__.py  analysis.py  cli.py  formatting.py  onchain.py  py.typed  rpc.py  scoring.py  watch.py
scripts/: __init__.py  analysis.py  cli.py  formatting.py  onchain.py  purge_leaked_demo_history.sh  rugguard.py  rugguard.py.rej  scoring.py  solana-rug.py  telegram_bot.py  watch.py
solana_rug/: __init__.py
tests/: test_checks.py  test_checks.py.rej  test_telegram_bot.py
